--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     scrollbar-width: none; /* for Firefox */
     overflow-y: scroll; 
     font-family: 'Roboto', sans-serif;
-    font-size: 16px;
+    font-size: 1.3125rem;
 }
 body::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
