--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+html{
+    font-size:.9rem;;
+}
+
+
 body{
     margin: 0;
     width: 100%;
     scrollbar-width: none; /* for Firefox */
     overflow-y: scroll; 
     font-family: 'Roboto', sans-serif;
-    font-size: 1.3125rem;
+    
 }
 body::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
@@ -35,25 +40,24 @@ h3{
 }
 
 p{
-   
+   font-size: 1.5rem;
 }
 
 .container{
     margin: 0 auto;
-    max-width: 45em;
+    width: 90%;
+    max-width: 35em;
     text-align: center;
     padding: 50px;
 }
 
 header{
-    
-    background: #FFFF8A;
+    min-height: 100vh;
+    background: #FFFF8A; 
+    display: flex;
+    align-items: center;
 }
 
-.header{
-    padding-top: 5rem;
-    padding-bottom: 10rem;
-}
 #frontHi{
     font-size: 3.6rem;
 }
@@ -68,9 +72,9 @@ header{
 img{
     display: block;
     margin: 0 auto;
-    width: 20rem;
+    width: 70%;
    border-radius: 100px;
-   border: 1px solid black;
+   
 }
 
 .btn{
@@ -81,7 +85,7 @@ img{
     border-radius: 2rem;
     display:inline-block;
     margin-top:1rem;
-    border: 1px solid black;
+   
     
 }
 
@@ -125,4 +129,41 @@ img{
 
 .links:hover{
     color: blue;
+}
+
+
+@media  ( min-width:750px){
+    html{
+        font-size: 1.2rem;
+
+    }
+    main{
+        display: flex;
+        align-items: center;
+    }
+
+    section .container{
+        width: 80%;
+        
+    }
+    .section-two {
+        background: #FA8072;
+    }
+    .section-two .span-title, .color-diff{
+        color: black;
+    }
+    .btn-two{
+        background: black;
+        color: white;
+    }
+    .btn-two:hover{
+        background-color: white;
+        color: black;
+    }
+    .links{
+        color: black;
+    }
+    .links:hover{
+        color: white;
+    }
 }
