--- a/style.css
+++ b/style.css
@@ -81,7 +81,10 @@ p{
 }
 /*===========================lay out==================*/
 .container{
-    padding: 5rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 
 header{
@@ -94,6 +97,7 @@ header{
 }
 .section-two{
     background: #FFFF8A;
+
 }
 
 /* misc */
